tests/posts/valid/2014-06-10-url-slug-here.markdown
; Comments comments comments.

; Blank lines should be ignored.

; Comments comments comments.

Title: Some kind of post title

Tags: News, Slugs, PHP

Slug: url-slug-here

Date: 2014-06-10

Body:

# Heading 1

Here is the body of your post. This block is parsed as Markdown.
