tests/posts/invalid/invalid-body.markdown
Title: Missing date.

Tags: News, Slugs, PHP

Slug: missing-date

Date: 2014-01-01 00:00:00

Body: Text should not be here
